# Mera-Flow

./: .gitignore  README.md
desktop-app/: package-lock.json  package.json  tailwind.config.mjs  tsconfig.node.tsbuildinfo  vite.config.ts
desktop-app/src/: App.tsx  index.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: lib.rs  main.rs
desktop-app/src/components/: DashboardUI.tsx  WidgetUI.tsx
desktop-app/src/utils/: audio.ts
stt-server/: .gitignore  Dockerfile  main.py
